*SVN*

* Added block-acceptance to JavaScriptHelper#javascript_tag #7527 [BobSilva/tarmo/rmm5t]

* Fixed that altering join tables in migrations would fail w/ sqlite3 #7453 [TimoMihaljov/brandon]

* Fix association writer with :dependent => :nullify.  #7314 [Jonathan Viney]

* OpenBase: update for new lib and latest Rails. Support migrations.  #8748 [dcsesq]

* Moved acts_as_tree into a plugin of the same name on the official Rails svn #9514 [lifofifo]

* Moved acts_as_nested_set into a plugin of the same name on the official Rails svn #9516 [josh]

* Moved acts_as_list into a plugin of the same name on the official Rails svn [josh]

* Explicitly require active_record/query_cache before using it.  [Jeremy Kemper]

* Fix bug where unserializing an attribute attempts to modify a frozen @attributes hash for a deleted record.  [Rick, marclove]

* Performance: absorb instantiate and initialize_with_callbacks into the Base methods. [Jeremy Kemper]

* Fixed that eager loading queries and with_scope should respect the :group option [DHH]

* Improve performance and functionality of the postgresql adapter.  Closes #8049 [roderickvd]

	For more information see: http://dev.rubyonrails.org/ticket/8049

* Don't clobber includes passed to has_many.count [danger]

* Make sure has_many uses :include when counting [danger]

* Change the implementation of ActiveRecord's attribute reader and writer methods [nzkoz]
 - Generate Reader and Writer methods which cache attribute values in hashes.  This is to avoid repeatedly parsing the same date or integer columns.
 - Change exception raised when users use find with :select then try to access a skipped column.  Plugins could override missing_attribute() to lazily load the columns.
 - Move method definition to the class, instead of the instance
 - Always generate the readers, writers and predicate methods.

* Perform a deep #dup on query cache results so that modifying activerecord attributes does not modify the cached attributes.  [Rick]
